Fixed white space bug on the withHaqq page as well as updating the font and line spacing

--- a/src/pages/WithHaqqPage.module.css
+++ b/src/pages/WithHaqqPage.module.css
@@ -29,6 +29,7 @@
     animation-timing-function: ease-out;
   }
 }
+
 .withhaqqlogoimgIcon {
   align-self: stretch;
   flex: 1;
@@ -63,6 +64,7 @@
 }
 .anInstagramPageDedicatedTo {
   display: block;
+  line-height: 1.4rem;
 }
 .anInstagramPageContainer1 {
   line-break: anywhere;
@@ -72,7 +74,9 @@
   margin: 0;
   display: flex;
   align-items: center;
-  width: 24.81rem;
+  font: var(--font-playfair-display);
+  width: 40rem;
+  font-size: 1rem;
 }
 .anInstagramPageContainer,
 .instagram,
@@ -221,10 +225,10 @@
   position: relative;
   background-color: var(--color-white);
   width: 100%;
-  height: 69.5rem;
   align-items: flex-end;
   justify-content: flex-start;
   gap: var(--gap-mid);
+  font-family: var(--font-playfair-display);
 }
 @media screen and (max-width: 1200px) {
   .withhaqqmaincontent {
@@ -245,6 +249,9 @@
   .withhaqqlogoimgdiv {
     width: 8.13rem;
     height: 10rem;
+  }
+  .anInstagramPageDedicatedTo {
+    line-height: 0.75rem;
   }
   .withhaqq {
     font-size: var(--font-size-mid);
@@ -371,12 +378,12 @@
   }
 
   .adhkarexplanationdiv p {
-    font-size: 0.1rem;
+    font-size: 0.4rem;
     padding: 0.33rem 2rem;
   }
 
   .adhkarexplanationdiv {
-    margin-bottom: 2.5rem;
+    margin-bottom: 1rem;
   }
 }
 
@@ -394,5 +401,13 @@
   .instagram,
   .withhaqq1 {
     font-size: 7px;
+  }
+
+  .adhkarexplanationdiv p {
+    font-size: 0.348rem;
+  }
+
+  .adhkarexplanationdiv {
+    margin-bottom: 1rem;
   }
 }
